--- a/static/css/supervisorio.css
+++ b/static/css/supervisorio.css
@@ -1,6 +1,8 @@
 
 body { 
     background-color: rgb(0, 0, 0)!important;
+    cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><path fill="orange" stroke="black" stroke-width="1.5" d="M6,2 L26,13 L17.72,15.07 L16,24.35 L6,2 Z"/></svg>'), auto;
+
 }
 
 .menu { 
@@ -10,6 +12,8 @@ body {
 
 
 #tecnologias { 
+    display: flex;
+    flex-wrap: wrap;
     font-size: 3rem;
     color: white;
     
@@ -19,6 +23,8 @@ body {
     color: #daba00; /* Tomato color */
     transform: translate(1px, -1px);
 }
+
+
 
 .titulo{
   font-family: "Bebas Neue", sans-serif;
