Testando envio de E-mail3

--- a/static/css/orcamentos.css
+++ b/static/css/orcamentos.css
@@ -5,15 +5,16 @@
 }
 
 
-body { 
-    background-image: url('../img/fundoorca.jpg') !important;
+body {
+    background-image: url('../../img/fundoorca.jpeg')!important;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
     font-family: 'Fira Sans', sans-serif;
     cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><path fill="orange" stroke="black" stroke-width="1.5" d="M6,2 L26,13 L17.72,15.07 L16,24.35 L6,2 Z"/></svg>'), auto;
-    font-family:'Fira Sans', sans-serif;
+    font-family: 'Fira Sans', sans-serif;
 }
+
 
 h1 { 
     color: var(--cor-primaria);
