--- a/static/css/escopo.css
+++ b/static/css/escopo.css
@@ -20,6 +20,11 @@ body {
     gap: 0.4rem;
 }
 
+.about-scroll {
+    height: 210px;
+    overflow: hidden;
+}
+
 #tecnologias { 
     font-size: 3rem;
     color: white;
