--- a/static/css/escopo.css
+++ b/static/css/escopo.css
@@ -1,6 +1,6 @@
 
 body { 
-    background-color: rgb(0, 0, 0)!important;
+    background-image: url('../../img/fundoorca.jpeg')!important;
     cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><path fill="orange" stroke="black" stroke-width="1.5" d="M6,2 L26,13 L17.72,15.07 L16,24.35 L6,2 Z"/></svg>'), auto;
 
 }
@@ -8,6 +8,10 @@ body {
 .menu { 
     width: 40%;
     height: 40vh;
+}
+
+.slide { 
+    margin-top: 170px;
 }
 
 .tools-container { 
